feat: added keywords pages

--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -1,15 +1,21 @@
 ---
 import { config } from "src/config";
-import { Image } from "astro:assets";
+import Image from "@components/image/Image.astro";
+import logo from "@assets/images/logo.png";
 ---
 
 <section class="py-10">
   <div class="container flex justify-between">
     <div class="flex items-center gap-4">
-      <Image src="/logo.svg" height={34} width={80} alt={config.name} />
+      <div class="w-[80px] h-[34px]">
+        <Image src={logo} alt={config.name} />
+      </div>
       <p class="text-white/60 text-xs">
         Agência Digital Wule - 2025. Todos os direitos reservados.
       </p>
+    </div>
+    <div>
+      <a href={`/${config.base}/mapa-site`} class="text-xs">Mapa do Site</a>
     </div>
   </div>
 </section>
