--- a/src/flow/home/components/ContactUs/ContactUs.astro
+++ b/src/flow/home/components/ContactUs/ContactUs.astro
@@ -1,20 +1,19 @@
 ---
 import Button from "@components/button/Button.astro";
 import Typography from "@components/typography";
-import { Image } from "astro:assets";
+import Image from "@components/image/Image.astro";
+import wuleDetail from "@assets/images/wule-detail.png";
 ---
 
 <section
   class="section relative bg-linear-65 from-purple-500 to-pink-500 mt-20"
 >
   <div class="container">
-    <Image
-      src="/wule-detail.png"
-      alt="Wule Details"
-      height={220}
-      width={170}
-      class="absolute top-0 left-1/2 -translate-x-1/2 -mt-34 select-none"
-    />
+    <div
+      class="absolute top-0 left-1/2 -translate-x-1/2 -mt-34 select-none w-[170px] h-[220px]"
+    >
+      <Image src={wuleDetail} alt="Wule Details" />
+    </div>
     <div class="flex justify-center">
       <div class="flex flex-col gap-8 content-between items-center">
         <div class="flex-1 flex flex-col gap-2 max-w-2xl text-center">
@@ -28,7 +27,10 @@ import { Image } from "astro:assets";
           >
         </div>
         <div>
-          <Button color="white">Começar agora</Button>
+          <Button
+            aria-label="Clique para entrar em contato com a Wule"
+            color="white">Começar agora</Button
+          >
         </div>
       </div>
     </div>
