fix: adjusted base path config

--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -15,7 +15,7 @@ import { Picture } from "astro:assets";
       </p>
     </div>
     <div>
-      <a href={`/${config.base}/mapa-site`} class="text-xs">Mapa do Site</a>
+      <a href={`/mapa-site`} class="text-xs">Mapa do Site</a>
     </div>
   </div>
 </section>
