--- a/src/flow/layouts/Main/MainLayout.astro
+++ b/src/flow/layouts/Main/MainLayout.astro
@@ -11,11 +11,7 @@ const { title, description, keywords } = Astro.props;
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href={`/${config.base}/favicon.svg`}
-    />
+    <link rel="icon" type="image/svg+xml" href={`/favicon.svg`} />
     <meta name="viewport" content="width=device-width" />
     <title>{title ?? config.name}</title>
     <meta name="description" content={description} />
