feat: added contact page

--- a/src/flow/home/Home.astro
+++ b/src/flow/home/Home.astro
@@ -37,7 +37,10 @@ import { Picture } from "astro:assets";
             entregamos tráfego qualificado.
           </Typography>
         </div>
-        <Button aria-label="Clique para entrar em contato com a agência Wule"
+        <Button
+          as="a"
+          href="/contato"
+          aria-label="Clique para entrar em contato com a agência Wule"
           >Entrar em contato</Button
         >
       </div>
