--- a/src/flow/home/components/ContactUs/ContactUs.astro
+++ b/src/flow/home/components/ContactUs/ContactUs.astro
@@ -28,6 +28,8 @@ import { Picture } from "astro:assets";
         </div>
         <div>
           <Button
+            as="a"
+            href="/contato"
             aria-label="Clique para entrar em contato com a Wule"
             color="white">Começar agora</Button
           >
