--- a/src/components/button/Button.astro
+++ b/src/components/button/Button.astro
@@ -1,10 +1,11 @@
 ---
+import type { HTMLTag } from "astro/types";
 import { ButtonStyles } from "./styles";
 import type { IButtonProps } from "./types";
 
-type Props = IButtonProps;
+type Props<Tag extends HTMLTag = "button"> = IButtonProps<Tag>;
 
-const { size, color } = Astro.props;
+const { size, color, as: Tag = "button", ...props } = Astro.props;
 ---
 
-<button class={ButtonStyles({ size, color })}><slot /></button>
+<Tag {...props} class={ButtonStyles({ size, color })}><slot /></Tag>
