feat: added google recaptcha validation

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "@components/button/Button.astro";
+import Button from "@components/button";
 import logo from "@assets/images/logo.png";
 import { Picture } from "astro:assets";
 ---
