--- a/src/flow/contato/ContatoPage.astro
+++ b/src/flow/contato/ContatoPage.astro
@@ -5,7 +5,6 @@ import Picture from "astro/components/Picture.astro";
 import { config } from "src/config";
 import logo from "@assets/images/logo.png";
 import ContactForm from "./components/ContactForm";
-import Button from "@components/button/Button.astro";
 ---
 
 <MainLayout description={config.description} keywords={config.keywords}>
@@ -34,9 +33,7 @@ import Button from "@components/button/Button.astro";
         <div
           class="flex gap-4 flex-col p-8 bg-gray-900/60 rounded-xl border border-gray-800 w-full max-w-3xl"
         >
-          <ContactForm client:load>
-            <Button type="submit" aria-label="">Enviar</Button>
-          </ContactForm>
+          <ContactForm client:load />
         </div>
       </div>
     </div>
