--- a/src/flow/home/Home.astro
+++ b/src/flow/home/Home.astro
@@ -1,6 +1,6 @@
 ---
 import Icon from "@components/icon/Icon.astro";
-import Button from "../../components/button/Button.astro";
+import Button from "../../components/button";
 import Typography from "../../components/typography";
 import About from "./components/About/About.astro";
 import ContactUs from "./components/ContactUs/ContactUs.astro";
