--- a/src/flow/home/components/ContactUs/ContactUs.astro
+++ b/src/flow/home/components/ContactUs/ContactUs.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "@components/button/Button.astro";
+import Button from "@components/button";
 import Typography from "@components/typography";
 import wuleDetail from "@assets/images/wule-detail.png";
 import { Picture } from "astro:assets";
