--- a/src/flow/layouts/Main/MainLayout.astro
+++ b/src/flow/layouts/Main/MainLayout.astro
@@ -22,6 +22,7 @@ const { title, description, keywords } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body
     ><slot />
