fix: keywords path

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -6,9 +6,9 @@ import { Picture } from "astro:assets";
 
 <header class="bg-slate-900 sticky top-0">
   <div class="container flex justify-between py-4 items-center">
-    <div class="w-[120px] h-[80]">
+    <a href="/" class="w-[120px] h-[80]">
       <Picture src={logo} alt="Wule Agência Digital" width={120} height={80} />
-    </div>
+    </a>
     <Button aria-label="">Começar agora</Button>
   </div>
 </header>
