--- a/src/flow/mapa-site/MapaSitePage.astro
+++ b/src/flow/mapa-site/MapaSitePage.astro
@@ -18,7 +18,7 @@ const keywords = getKeywords();
           keywords.map((keyword) => (
             <div class="py-8">
               <div class="flex flex-col gap-2">
-                <a href={keyword.slug}>
+                <a href={`/${keyword.slug}`}>
                   <Typography variant="title-small">{keyword.title}</Typography>
                 </a>
                 <Typography>{keyword.description}</Typography>
