feat: migrated fonts to local

--- a/src/flow/layouts/Main/MainLayout.astro
+++ b/src/flow/layouts/Main/MainLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../../../styles/global.css";
 import Footer from "@components/footer/Footer.astro";
+import Font from "astro/components/Font.astro";
 import { config } from "src/config";
 
 type Props = MainLayoutProps;
@@ -16,16 +17,11 @@ const { title, description, keywords } = Astro.props;
     <title>{title ?? config.name}</title>
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords.join(", ")} />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <Font cssVariable="--font-primary" />
+    <Font cssVariable="--font-secondary" />
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body
     ><slot />
-    <Footer /></body
-  >
+    <Footer /></body>
 </html>
